--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="#features" class="text-gray-700 hover:text-gray-900">Features</a>
           <a href="#how-it-works" class="text-gray-700 hover:text-gray-900">How It Works</a>
           <a
-            href="https://calendly.com/phamswannty/30min"
+            href="https://calendly.com/ty-phamswann-docmap/30min"
             class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg"
           >
             Book Demo
@@ -67,7 +67,7 @@
       </p>
       <div class="mt-8 flex justify-center">
         <a
-          href="https://calendly.com/phamswannty/30min"
+          href="https://calendly.com/ty-phamswann-docmap/30min"
           class="px-8 py-3 rounded-md bg-blue-600 text-white font-medium hover:bg-blue-700"
         >
           Book a Demo
@@ -245,7 +245,7 @@
           to unlock the full potential of your docs.
         </p>
         <a
-          href="https://calendly.com/phamswannty/30min"
+          href="https://calendly.com/ty-phamswann-docmap/30min"
           class="mt-8 inline-block bg-white hover:bg-gray-50 text-blue-600 font-medium py-3 px-8 rounded-md shadow"
         >
           Schedule Demo
