--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             href="https://calendly.com/ty-phamswann-docmap/30min"
             class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg"
           >
-            Book Demo
+            Book Call
           </a>
         </div>
       </div>
@@ -70,7 +70,7 @@
           href="https://calendly.com/ty-phamswann-docmap/30min"
           class="px-8 py-3 rounded-md bg-blue-600 text-white font-medium hover:bg-blue-700"
         >
-          Book a Demo
+          Book a Call
         </a>
       </div>
     </div>
@@ -248,7 +248,7 @@
           href="https://calendly.com/ty-phamswann-docmap/30min"
           class="mt-8 inline-block bg-white hover:bg-gray-50 text-blue-600 font-medium py-3 px-8 rounded-md shadow"
         >
-          Schedule Demo
+          Schedule Call
         </a>
       </div>
     </div>
