--- a/failure.html
+++ b/failure.html
@@ -58,19 +58,19 @@
   </p>
   
   <div id="apiDocs">
-    <h2>Fake API Documentation</h2>
+    <h2>DocMap API Documentation</h2>
     <p><strong>Endpoint:</strong> <code>GET /v1/fake</code></p>
     <p>
       This endpoint returns fake data for demonstration purposes.  
       You can pass query parameters to filter or modify the response.
     </p>
     <p><strong>Example Request:</strong></p>
-    <pre><code>GET https://api.example.com/v1/fake?status=active&amp;limit=10</code></pre>
+    <pre><code>GET https://api.example.com/v1/docmapdev?status=active&amp;limit=10</code></pre>
     <p><strong>Example Response:</strong></p>
     <pre><code>{
   "data": [
-    { "id": 1, "status": "active", "info": "Lorem ipsum" },
-    { "id": 2, "status": "active", "info": "Dolor sit amet" }
+    { "id": 1, "status": "active", "info": "doc" },
+    { "id": 2, "status": "active", "info": "map" }
   ],
   "count": 2
 }</code></pre>
