--- a/failure.html
+++ b/failure.html
@@ -59,7 +59,7 @@
   
   <div id="apiDocs">
     <h2>DocMap API Documentation</h2>
-    <p><strong>Endpoint:</strong> <code>GET /v1/fake</code></p>
+    <p><strong>Endpoint:</strong> <code>GET /v1/docmapdev</code></p>
     <p>
       This endpoint returns fake data for demonstration purposes.  
       You can pass query parameters to filter or modify the response.
