--- a/failure.html
+++ b/failure.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Obfuscated Docs Demo - Clean UI</title>
+  <title>Documentation</title>
 
   <!-- Include Bootstrap 5 (CDN) -->
   <link 
@@ -50,8 +50,6 @@
       <span class="title-highlight">Obfuscated</span> Documentation Page
     </h1>
     <p class="text-muted">
-      This page demonstrates how to hide your documentation in a Base64-encoded string.  
-      Most bots and scrapers won’t bother decoding it, so the actual content remains hidden.
     </p>
     
     <!-- The Trigger Link -->
@@ -85,7 +83,6 @@
 
     <div class="offcanvas-body">
       <p class="text-muted">
-        The documentation is hidden by default. Click the button below to decode the content.
       </p>
       <button class="btn btn-sm btn-success" onclick="revealDocs()">
         Reveal Docs
