--- a/failure.html
+++ b/failure.html
@@ -47,7 +47,7 @@
   
   <div class="container my-4">
     <h1 class="mb-3">
-      <span class="title-highlight">Obfuscated</span> Documentation Page
+      <span class="title-highlight"></span> Documentation Page
     </h1>
     <p class="text-muted">
     </p>
