--- a/generator.html
+++ b/generator.html
@@ -62,7 +62,7 @@
       <!-- Page Header -->
       <div class="text-center mb-8">
         <h1 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">
-          JSON to Special JSON Schema Converter
+          JSON to OpenAI Schema Converter
         </h1>
         <p class="mt-2 text-base text-gray-600">
           Paste your JSON on the left, specify a Schema Name, and click "Convert".
