--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DocMap</title>
+  <title>DocMap - Universal Documentation API</title>
   
   <!-- Favicon -->
   <link
@@ -30,16 +30,18 @@
             alt="DocMap Logo"
             class="h-8"
           />
-          <span class="text-xl font-semibold text-gray-900">DocMap</span>
+          <span class="text-xl font-semibold text-gray-900">
+            DocMap
+          </span>
         </div>
         <div class="hidden md:flex items-center space-x-4">
           <a href="#features" class="text-gray-700 hover:text-gray-900">Features</a>
           <a href="#how-it-works" class="text-gray-700 hover:text-gray-900">How It Works</a>
           <a
-            href="https://calendly.com/ty-phamswann-docmap/30min"
+            href="#waitlist"
             class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg"
           >
-            Book Call
+            Join Waitlist
           </a>
         </div>
       </div>
@@ -56,74 +58,47 @@
     <!-- Content -->
     <div class="relative z-10 max-w-3xl mx-auto text-center px-4 sm:px-6 lg:px-8">
       <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold text-gray-900 tracking-tight">
-        Make Your Documentation
-        <br />
-        <span class="text-blue-600">AI-Visible</span>
+        The Universal Documentation API
       </h1>
       <p class="mt-5 max-w-xl mx-auto text-base text-gray-700 sm:text-lg md:text-xl">
-        Are your Documentation and API references invisible to tools like Cursor and ChatGPT?
-        Transform your content into an accessible, AI-ready resource purpose-built for
-        modern development workflows.
+        Access up-to-date documentation for thousands of the most popular 
+        programming languages, libraries, and APIs—all via a single, powerful API.
       </p>
       <div class="mt-8 flex justify-center">
         <a
-          href="https://calendly.com/ty-phamswann-docmap/30min"
+          href="#waitlist"
           class="px-8 py-3 rounded-md bg-blue-600 text-white font-medium hover:bg-blue-700"
         >
-          Book a Call
+          Join the Waitlist
         </a>
       </div>
     </div>
   </div>
   <!-- End Hero Section -->
 
-  <!-- AI Tools Section (Gray Background) -->
+  <!-- Key Value Proposition Section -->
   <div class="py-16 bg-gray-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="text-center">
         <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-          Serve your developers however they code
+          A Single Source for Every Doc, Everywhere
         </h2>
         <p class="mt-4 max-w-2xl text-xl text-gray-500 mx-auto">
-          With DocMap, your documentation becomes fully accessible to the AI assistants and 
-          developer tools used by modern teams.
+          Never stitch together multiple sources or rely on incomplete crawlers again. 
+          DocMap gathers all content on a page—even from the trickiest sites—and keeps 
+          it fully searchable and refreshed.
         </p>
-      </div>
-      <!-- Staggered layout: 5 columns -->
-      <div class="grid grid-cols-5 gap-8 place-items-center mt-12">
-        <!-- Row 1, Col 1 -->
-        <div class="col-span-1 row-start-1 col-start-1 flex justify-center">
-          <img src="logos/chatgpt.svg.png" alt="ChatGPT" class="h-12"/>
-        </div>
-        <!-- Row 1, Col 3 -->
-        <div class="col-span-1 row-start-1 col-start-3 flex justify-center">
-          <img src="logos/claude.svg" alt="Claude" class="h-12"/>
-        </div>
-        <!-- Row 1, Col 5 -->
-        <div class="col-span-1 row-start-1 col-start-5 flex justify-center">
-          <img src="logos/continue.png" alt="Continue" class="h-12"/>
-        </div>
-        <!-- Row 2, Col 2 -->
-        <div class="col-span-1 row-start-2 col-start-2 flex justify-center">
-          <img src="logos/cursor.png" alt="Cursor" class="h-12"/>
-        </div>
-        <!-- Row 2, Col 4 -->
-        <div class="col-span-1 row-start-2 col-start-4 flex justify-center">
-          <img src="logos/gemini.svg.png" alt="Gemini" class="h-12"/>
-        </div>
       </div>
     </div>
   </div>
-  <!-- End AI Tools Section -->
+  <!-- End Key Value Proposition Section -->
 
   <!-- Features Section (White Background) -->
   <div id="features" class="py-16 bg-white">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="lg:text-center">
-        <h2
-          class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl"
-        >
-          Built for AI-First Development
+        <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+          Why Choose DocMap
         </h2>
       </div>
 
@@ -131,36 +106,36 @@
         <div
           class="space-y-10 md:space-y-0 md:grid md:grid-cols-3 md:gap-x-8 md:gap-y-10"
         >
+          <!-- Feature 1 -->
           <div class="relative">
             <div class="text-lg font-medium text-gray-900">
-              Invisible Snippet, Clean Data
+              Thousands of Languages & APIs
             </div>
             <p class="mt-2 text-base text-gray-500">
-              An invisible snippet is all it takes to make your documentation fully accessible to AI parsers. 
-              We provide a clean, structured data feed that’s hidden from normal view but instantly readable 
-              by ChatGPT, Cursor, Copilot, and other AI tools.
+              From the latest JavaScript frameworks to niche programming environments,
+              DocMap supports thousands of platforms, libraries, and APIs out of the box.
             </p>
           </div>
 
+          <!-- Feature 2 -->
+          <div class="relative">
+            <div class="text-lg font-medium text-gray-900">
+              Complete Page Coverage
+            </div>
+            <p class="mt-2 text-base text-gray-500">
+              Other tools scrape partial data; we capture every code example,
+              parameter table, and snippet. With DocMap, nothing gets left behind.
+            </p>
+          </div>
+
+          <!-- Feature 3 -->
           <div class="relative">
             <div class="text-lg font-medium text-gray-900">
               Always Up-to-Date
             </div>
             <p class="mt-2 text-base text-gray-500">
-              Every time you update your docs, our snippet refreshes to ensure the latest information 
-              is available. Say goodbye to outdated references—DocMap keeps your documentation accurate 
-              and current for AI-driven development.
-            </p>
-          </div>
-
-          <div class="relative">
-            <div class="text-lg font-medium text-gray-900">
-              Full-Service Integration
-            </div>
-            <p class="mt-2 text-base text-gray-500">
-              From parsing your existing documentation to generating the snippet, DocMap handles all 
-              the heavy lifting behind the scenes. No complicated setup or custom scripts—just point 
-              us to your docs, and we’ll take care of the rest.
+              We continuously check for updates and re-crawl pages to ensure 
+              your documentation data is accurate and timely—no more stale references.
             </p>
           </div>
         </div>
@@ -168,7 +143,7 @@
     </div>
   </div>
 
-  <!-- How It Works Section (Updated) -->
+  <!-- How It Works Section -->
   <div id="how-it-works" class="py-16 bg-gray-50">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="text-center">
@@ -176,7 +151,7 @@
           How It Works
         </h2>
         <p class="mt-4 max-w-2xl text-lg text-gray-500 mx-auto">
-          Get your documentation AI-ready in just three simple steps.
+          Integrate once, then let our API handle the rest.
         </p>
       </div>
 
@@ -186,10 +161,12 @@
           <div class="h-12 w-12 flex items-center justify-center rounded-full bg-blue-500 text-white text-xl font-bold">
             1
           </div>
-          <h3 class="mt-4 text-lg font-medium text-gray-900">Point to Your Docs</h3>
+          <h3 class="mt-4 text-lg font-medium text-gray-900">
+            Send Your Request
+          </h3>
           <p class="mt-2 text-base text-gray-500">
-            Simply provide the URL or repository of your documentation. We support any format or structure, 
-            from modern sites to legacy systems.
+            Your app or service hits our API with the URL or resource identifier 
+            for the doc set you need.
           </p>
         </div>
         <!-- Step 2 -->
@@ -197,10 +174,12 @@
           <div class="h-12 w-12 flex items-center justify-center rounded-full bg-blue-500 text-white text-xl font-bold">
             2
           </div>
-          <h3 class="mt-4 text-lg font-medium text-gray-900">Smart Processing</h3>
+          <h3 class="mt-4 text-lg font-medium text-gray-900">
+            Unified Scrape & Index
+          </h3>
           <p class="mt-2 text-base text-gray-500">
-            We transform your documentation into clean, structured formats optimized for 
-            AI tools and modern development workflows.
+            We parse, clean, and index all content on the page—code blocks, 
+            tables, text, and more—so you get comprehensive data.
           </p>
         </div>
         <!-- Step 3 -->
@@ -208,10 +187,12 @@
           <div class="h-12 w-12 flex items-center justify-center rounded-full bg-blue-500 text-white text-xl font-bold">
             3
           </div>
-          <h3 class="mt-4 text-lg font-medium text-gray-900">AI Visibility</h3>
+          <h3 class="mt-4 text-lg font-medium text-gray-900">
+            Results in JSON
+          </h3>
           <p class="mt-2 text-base text-gray-500">
-            Your docs will now be parsable by ChatGPT Search, Cursor, Continue.dev, 
-            or any tool your customers use to code.
+            Receive a clean, structured JSON response you can integrate 
+            into your own site search, documentation portals, or AI models.
           </p>
         </div>
       </div>
@@ -219,8 +200,25 @@
   </div>
   <!-- End How It Works Section -->
 
-  <!-- CTA Section (New) -->
-  <div id="book-demo" class="relative bg-blue-600">
+  <!-- Pricing Section (Optional) -->
+  <div class="py-16 bg-white">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="text-center">
+        <h2 class="text-3xl font-extrabold text-gray-900 sm:text-4xl">
+          Usage-Based Pricing
+        </h2>
+        <p class="mt-4 max-w-2xl text-lg text-gray-500 mx-auto">
+          Pay only for the pages you process. Whether you’re a small startup 
+          or an enterprise, DocMap scales with you.
+        </p>
+      </div>
+      <!-- Example: Basic pricing cards or table could go here -->
+    </div>
+  </div>
+  <!-- End Pricing Section -->
+
+  <!-- CTA Section -->
+  <div id="waitlist" class="relative bg-blue-600">
     <!-- Background Decorative Circle -->
     <div class="absolute inset-0 overflow-hidden">
       <svg
@@ -237,23 +235,23 @@
     <div class="relative z-10 max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
       <div class="text-center">
         <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
-          Ready to get started?
+          Be the First to Get Access
         </h2>
         <p class="mt-4 text-lg leading-6 text-blue-100 max-w-2xl mx-auto">
-          See how DocMap can transform your documentation into a powerful
-          resource for AI-powered development. Our team will show you how
-          to unlock the full potential of your docs.
+          We’re rolling out DocMap’s Universal Documentation API to a limited
+          group of early adopters. Join the waitlist to secure your spot and
+          get early access to our game-changing doc platform.
         </p>
         <a
-          href="https://calendly.com/ty-phamswann-docmap/30min"
+          href="#"
           class="mt-8 inline-block bg-white hover:bg-gray-50 text-blue-600 font-medium py-3 px-8 rounded-md shadow"
         >
-          Schedule Call
+          Join Waitlist
         </a>
       </div>
     </div>
   </div>
-  <!-- End CTA Section (New) -->
+  <!-- End CTA Section -->
 
   <!-- Footer (White) -->
   <footer class="bg-white">
@@ -264,7 +262,7 @@
         <a href="#" class="text-gray-400 hover:text-gray-500">Contact</a>
       </div>
       <div class="mt-8 md:mt-0 md:order-1">
-        <p class="text-center text-base text-gray-400">2025 DocMap</p>
+        <p class="text-center text-base text-gray-400">&copy; 2025 DocMap</p>
       </div>
     </div>
   </footer>
